# gametheory-mcp

./: .gitignore  README.md  pyproject.toml  server.json
gametheory_mcp/: __init__.py  __main__.py  _internal.py  server.py
gametheory_mcp/auctions/: __init__.py  bidder.py  seller.py
gametheory_mcp/mechanism/: __init__.py  optimal_auction.py  posted_price.py
gametheory_mcp/negotiation/: __init__.py  buy.py  sell.py
tests/: test_smoke.py
