[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gametheory-mcp"
version = "0.1.0"
description = "Equilibrium-aware primitives for AI agents — negotiation, auctions, mechanism design — over MCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sasha Klushin", email = "ryuxik@gmail.com" },
]
keywords = [
    "mcp", "model-context-protocol", "agent", "negotiation", "auction",
    "mechanism-design", "game-theory", "rubinstein", "myerson",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "numba>=0.58",
]

[project.urls]
Homepage = "https://snhp.dev"
API = "https://api.snhp.dev"
Source = "https://github.com/ryuxik/gametheory-mcp"
Issues = "https://github.com/ryuxik/gametheory-mcp/issues"

[project.scripts]
gametheory-mcp = "gametheory_mcp.server:main"

[tool.setuptools.packages.find]
include = ["gametheory_mcp*"]

[tool.setuptools.package-data]
gametheory_mcp = ["_data/*.json"]
